--- a/src/app/admin/setting/category/category.component.html
+++ b/src/app/admin/setting/category/category.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="offset-10 col-md-2">
-        <button  class="btn btn-primary" (click)="addEditcategory()">Add Category</button>
+        <button  class="btn btn-outline-success" (click)="addEditcategory()"><i class="bi bi-plus-circle"></i> Add Category</button>
     </div>
 </div>
 
@@ -53,8 +53,8 @@
                             <label class="custom-control-label"></label>
                         </div></td>
                         <td class="text-center">
-                            <input type="button" class="btn btn-sm btn-primary" value="Edit"  (click)="addEditcategory(rowData.id)">
-                            <input type="button" class="btn btn-sm btn-danger" value="Delete"  (click)="delete(rowData)">
+                            <button type="button" class="btn btn-sm btn-outline-success me-3" title="Edit" value="Edit"  (click)="addEditcategory(rowData.id)"><i class="bi bi-pencil-square"></i></button>
+                            <button type="button" class="btn btn-sm btn-outline-danger " value="Delete" title="Delete" (click)="delete(rowData)"><i class="bi bi-trash3"></i></button>
                         </td>
                     </tr>
                 </tbody>
