--- a/src/app/admin/setting/category/category.component.html
+++ b/src/app/admin/setting/category/category.component.html
@@ -9,7 +9,7 @@
         <div class="table_container">
             <div class="table_filter">
                 <div class="table_title">
-                    User
+                    Category
                 </div>
                 <div class="table_filter_btn">
                     <button class="filter_btn"><i class="bi bi-funnel"></i>Filter</button>
