--- a/src/app/admin/setting/category/category-action/category-action.component.html
+++ b/src/app/admin/setting/category/category-action/category-action.component.html
@@ -1,20 +1,20 @@
-<div class="form_start">
+<div class="row">
   <div class="title text-center">
     <h2>Create Category</h2>
   </div>
   <form>
     <div class="inputField">
       <label for="name">Category</label>
-      <input type="text" id="name" name="name" placeholder="Enter category" [(ngModel)]="categoryDto.name" required />
+      <input type="text" class="form-control" id="name" name="name" placeholder="Enter category" [(ngModel)]="categoryDto.name" required />
     </div>
     <div class="inputField">
       <label for="description">Description</label>
-      <textarea name="description" id="Message" rows="4" placeholder="Enter description"
+      <textarea name="description" class="form-control" id="Message" rows="4" placeholder="Enter description"
         [(ngModel)]="categoryDto.description"></textarea>
     </div>
     <div >
       <label for="isActive" >IsActive</label>
-      <input type="checkbox" [(ngModel)]="categoryDto.isActive" class="ml-5" name="isActive"
+      <input type="checkbox" class="form-control" [(ngModel)]="categoryDto.isActive" class="ml-5" name="isActive"
         id="isActive" />
     </div>
     <div class="inputField">
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="form_btn">
-      <button type="submit" (click)="save()">Submit</button>
+      <button type="submit" class="btn btn-default" (click)="save()">Submit</button>
     </div>
   </form>
 </div>
